--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./dist/css/style.min.css">
 </head>
 <body>
-    
+    <script src="./dist/js/main.min.js"></script>
 </body>
 </html>
