--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <p>Cześć!</p>
+    <p>Cześć!</p>
+    <p>Cześć!</p>
     
     <script src="./dist/js/main.min.js"></script>
 </body>
