--- a/page.html
+++ b/page.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./dist/css/style.min.css">
 </head>
+
 <body>
-    
+
     <!-- nav>ul>li*5{Link nr $} -->
 <nav>
     <ul>
@@ -18,12 +20,13 @@
         <li>Link nr 5</li>
     </ul>
 </nav>
-    <p>Strona główna!</p>
-    <a href="page.html">Podstrona</a>
+    <p>Podstrona!</p>
+    <a href="index.html">Strona główna</a>
     <footer>
     <p>Footer</p>
 </footer>
-    
+
     <script src="./dist/js/main.min.js"></script>
 </body>
+
 </html>
