--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" 
+    content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="To jest przykładowy opis strony, który będzie wyświetlany w wynikach wyszukiwania.">
     <title>Document</title>
     <link rel="stylesheet" href="./dist/css/style.min.css">
 </head>
