--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" 
-    content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="To jest przykładowy opis strony, który będzie wyświetlany w wynikach wyszukiwania.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="To jest przykładowy opis strony, który będzie wyświetlany w wynikach wyszukiwania.">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./dist/css/style.min.css">
+
 </head>
+
 <body>
-    
+
     <!-- nav>ul>li*5{Link nr $} -->
-<nav>
-    <ul>
-        <li>Link nr 1</li>
-        <li>Link nr 2</li>
-        <li>Link nr 3</li>
-        <li>Link nr 4</li>
-        <li>Link nr 5</li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li>Link nr 1</li>
+            <li>Link nr 2</li>
+            <li>Link nr 3</li>
+            <li>Link nr 4</li>
+            <li>Link nr 5</li>
+        </ul>
+    </nav>
     <p>Strona główna!</p>
     <a href="page.html">Podstrona</a>
     <footer>
-    <p>Footer</p>
-</footer>
-    
+        <p>Footer</p>
+    </footer>
+
     <script src="./dist/js/main.min.js"></script>
 </body>
+
 </html>
