--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li>Link nr 3</li>
             <li>Link nr 4</li>
             <li>Link nr 5</li>
+            <li>Link nr 6</li>
         </ul>
     </nav>
     <p>Strona główna!</p>
